# fastn-old

./: .gitignore  Cargo.toml  fpm.ftd  fpm.js
.github/workflows/: release.yml  rust.yml
examples/performance/: 10k-text.ftd  10k-text.logs  1k-text-1.logs  1k-text.ftd  50k-text-1.logs  50k-text.ftd  component-calling.ftd  component-rec-call.ftd  logs  loop.ftd
examples/sitemap-processor/: FPM.ftd
fastn/: Cargo.toml
fastn-cloud/: Cargo.toml
fastn-core/: Cargo.toml
fastn-core/ftd/: processors.ftd
fastn-core/src/: lib.rs  main.rs
fastn-core/src/library2022/processor/: figma_tokens.rs  sitemap.rs
fastn-core/tests/04-import-code-block/: cmd.p1
fastn-core/tests/04-import-code-block/input/amitu/.build/: index.html
fastn-core/tests/15-fpm-dependency-alias/: cmd.p1
fastn-core/tests/15-fpm-dependency-alias/input/amitu/.build/: index.html
fastn/src/: main.rs
fastn_core/: Cargo.toml
ftd/: cr-about.ftd  cr-create.ftd  cr-editor.ftd  design.ftd  editor.ftd  fpm-lib.ftd  fpm.ftd
releases/linux_musl_x86_64/: fpm.d  install-fpm.sh
src/: build.rs  config.rs  controller.rs  cr.rs  dependency.rs  diff.rs  doc.rs  document.rs  error.rs  file.rs  http.rs  lib.rs  main.rs  mark.rs  package_doc.rs  proxy.rs  render.rs  sitemap.rs  snaphot.rs  snapshot.rs  status.rs  sync.rs  tracker.rs  tracks.rs  translation.rs  user_group.rs  utils.rs  version.rs  wasm.rs  wasm_exports.rs
src/apis/: cache.rs  clone.rs  cr.rs  edit.rs  editor.rs  mod.rs  sync.rs  sync2.rs  view_source.rs
src/auth/: amazon.rs  apple.rs  baidu.rs  bitbucket.rs  digitalocean.rs  discord.rs  (+24 more)
(+103 files in other folders)
