[package]
name = "fpm"
version = "0.1.2"
authors = ["Amit Upadhyay <upadhyay@gmail.com>", "Shobhit Sharma <shobhit@fifthtry.com>"]
edition = "2021"
description = "fpm: FTD Package Manager"
license = "MIT"
repository = "https://github.com/FifthTry/fpm"
homepage = "https://fpm.dev"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ftd = "0.1.11"
clap = "2.33.3"
home = "0.5.3"
chrono = "0.4.19"

[dev-dependencies]
rusty-hook = "^0.11.2"
fbt-lib = "0.1.12"
