[package]
name = "fastn-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Abrar Khan <abrark@fifthtry.com>",
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
