[package]
name = "fastn"
version = "0.2.0"
authors = [
    "Abrar Khan <abrark@fifthtry.com>",
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
    "Shobhit Sharma <shobhit@fifthtry.com>",
]
edition = "2021"
description = "fastn: FTD Package Manager"
license = "MIT"
repository = "https://github.com/ftd-lang/fastn"
homepage = "https://fastn.dev"

[dependencies]
fastn-core = { version = "0.1.0", path = "../fastn-core" }
